fix card gap

--- a/src/_css/card.css
+++ b/src/_css/card.css
@@ -21,7 +21,7 @@
   }
 
   + .card {
-    margin-top: -0.5rem;
+    /* margin-top: -0.5rem; */
   }
 }
 
